--- a/src/styles/mainPageCss/_benefits.scss
+++ b/src/styles/mainPageCss/_benefits.scss
@@ -29,7 +29,7 @@
         bottom: 0;
         width: 100%;
         height: 6px;
-        background-image: url("./../assets/arrow-ben.svg");
+        background-image: url("./../../assets/arrow-ben.svg");
         background-repeat: no-repeat;
     }
 }
