--- a/src/styles/mainPageCss/_formPrice.scss
+++ b/src/styles/mainPageCss/_formPrice.scss
@@ -21,7 +21,7 @@
         width: 792px;
         height: 240px;
         // background-color: #999;
-        background-image: url("./../assets/Topology-2.svg");
+        background-image: url("./../../assets/Topology-2.svg");
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
