--- a/src/styles/mainPageCss/_header.scss
+++ b/src/styles/mainPageCss/_header.scss
@@ -4,7 +4,7 @@
     margin-right: 20px;
     padding-top: 20px;
     background-color: #999;
-    background-image: url("./../assets/bg.png");
+    background-image: url("./../../assets/bg.png");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
