--- a/src/styles/mainPageCss/_realized.scss
+++ b/src/styles/mainPageCss/_realized.scss
@@ -16,7 +16,7 @@
 }
 .realized__card--img-1 {
     background-color: #999;
-    background-image: url("./../assets/realized-img-1.png");
+    background-image: url("./../../assets/realized-img-1.png");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -24,14 +24,14 @@
 }
 .realized__card--img-2 {
     background-color: #999;
-    background-image: url("./../assets/realized-img-2.png");
+    background-image: url("./../../assets/realized-img-2.png");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
 }
 .realized__card--img-3 {
     background-color: #999;
-    background-image: url("./../assets/realized-img-3.png");
+    background-image: url("./../../assets/realized-img-3.png");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
