--- a/src/styles/mainPageCss/_about.scss
+++ b/src/styles/mainPageCss/_about.scss
@@ -46,7 +46,7 @@
         position: absolute;
         content: "";
         // background-color: #999;
-        background-image: url("./../assets/Topology.svg");
+        background-image: url("./../../assets/Topology.svg");
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
