added page card

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,4 +16,8 @@
 @use "./mainPageCss/contacts";
 @use "./mainPageCss/footer";
 
-@use "./catalogCss/catalog"
+@use "./catalogCss/catalog";
+@use "./card/cards";
+
+
+@use "./accordeon";
