--- a/src/styles/mainPageCss/_realized.scss
+++ b/src/styles/mainPageCss/_realized.scss
@@ -8,6 +8,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
+    overflow: hidden;
 }
 .realized__card {
     width: 585px;
